
[project]
name = "lab-bc-client"
version = "1.0.1"
authors = [
  { name="Joe Steinmeyer", email="jodalyst@mit.edu" },
]
description = "client-side interface for lab-bc"
readme = "README.md"

requires-python = ">=3.8"

scripts = { lab-bc = "lab-bc-client.client:main" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "requests",
]
[project.urls]
Homepage = "https://fpga.mit.edu/6205/F24/documentation/lab-bc"
Homepage = "https://fpga.mit.edu/6205/F24/documentation/lab-bc"
